2004-12-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Fix up camel version to now be 1.2
	* camel/Makefile.am : Include the GLIB_CFLAGS

2004-12-10  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (add_ical): Fixed some
	memory leaks
	* calendar/e-cal-backend-exchange.c : Some more here.

2004-12-09  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (open_calendar)
	(create_object)(send_objects) : Return appropriate error messages
	when in offline
	* calendar/e-cal-backend-exchange-tasks.c (open_task)
	(create_task_object) : Similar
	* calendar/e-cal-backend-exchange.c (get_cal_address) (get_mode)
	(set_mode) (e_cal_backend_exchange_get_cal_address) : Handle special
	cases when in offline.
	(open_calendar)(load_cache) : Modify to actually load only the cache
	when in offline
	(e_cal_backend_exchange_is_online) : Return the online/offline status
	of the calendar.
	* calendar/e-cal-backend-exchange.h : Added the prototype of
	e_cal_backend_exchange_is_online
	

2004-12-09  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-account.c (exchange_account_set_offline): Prepares 
	the account for offline caching in all the data necessary and sets it 
	to offline.
	(exchange_account_set_online): Sets the account to online mode and 
	tries to setup a connection with the server.
	(exchange_account_connect): This should now connect only if online.
	* storage/exchange-account.h : Added the function declarations.
	* storage/exchange-component.c (exchange_component_set_offline_listener):
	Sets a reference of the OfflineListener in the global ExchangeComponent 
	object.
	(exchange_component_get_account_for_uri) : This returns the defaul 
	account when in offline. This needs to be further fixed to handle 
	multiple accounts based on the uri passed.
	* storage/exchange-component.h : Similar
	* storage/exchange-offline-listener.c : Fixed some namespace issues.